Fix spacing.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,11 +36,7 @@
 
 .main {
   width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  margin-bottom: auto;
-  //margin: 80px auto;
+  margin: 50px auto auto auto;
 }
 
 .has-search .form-control {
